not working commit